nifi/base/statefulset-nifi.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nifi
  labels:
    app.kubernetes.io/name: nifi
    app.kubernetes.io/component: frontend
    app.openshift.io/runtime: openjdk
spec:
  serviceName: nifi
  replicas: 1
  selector:
    matchLabels:
      app: nifi
  template:
    metadata:
      labels:
        app: nifi
    spec:
      containers:
        - name: nifi
          image: nifi
          ports:
            - name: https
              containerPort: 8443
          resources:
            requests:
              cpu: 1000m
              memory: 2Gi
            limits:
              cpu: 1000m
              memory: 2Gi
          volumeMounts:
            - name: nifi-certs
              mountPath: /opt/certs/keystore.p12
              subPath: keystore.p12
            - name: nifi-certs
              mountPath: /opt/certs/truststore.p12
              subPath: truststore.p12
          #  - name: data
          #    mountPath: /opt/nifi-registry/nifi-registry-current/database
              #subPath: database
            #- name: nifi-registry-data
            #  mountPath: /opt/nifi-registry/nifi-registry-current/flow_storage
            #  subPath: flow_storage
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        fsGroup: 1000
      serviceAccountName: nifi
      volumes:
        - name: nifi-certs
          secret:
            secretName: nifi-tls
  #volumeClaimTemplates:
  #  - metadata:
  #    name: nifi-registry-data
  #    spec:
  #      accessModes:
  #        - ReadWriteMany
  #      storageClassName: nfs
  #      resources:
  #        requests:
  #          storage: 1Gi
