nifi/base/service-nifi.yaml
apiVersion: v1
kind: Service
metadata:
  name: nifi
spec:
  selector:
    app: nifi
  ports:
    - name: https
      port: 8443
      targetPort: https
